*** empty log message ***

--- a/quh/src/configure.in
+++ b/quh/src/configure.in
@@ -285,6 +285,7 @@ st_configure_in_t configure_in[] = {
     NULL,
     NULL
   },
+#if 0
   // libmpeg.a from splay
   {
     {"libmpeg/libmpeg.a", NULL},
@@ -300,6 +301,7 @@ st_configure_in_t configure_in[] = {
     "*** put libmpeg.a, mpegsound.h and mpegsound_locals.h into ./libmpeg\n"
     "*** start again afterwards"
   },
+#endif
   {
     {"libvorbis.so", "libogg.so", NULL},
     {"vorbis/vorbisfile.h", "vorbis/codec.h", "ogg/ogg.h", NULL},
