--- a/quh/src/Makefile
+++ b/quh/src/Makefile
@@ -18,11 +18,10 @@ OBJECTS=quh.o quh_misc.o quh_filter.o \
 	filter/id3.o filter/read.o filter/demux.o filter/cdda.o \
 	filter/cddb.o filter/lyrics.o filter/cdxa.o filter/xmms.o \
 	filter/nsf.o filter/gbs.o filter/gsf.o filter/gym.o \
-	filter/hes.o filter/psf2.o filter/spc.o filter/usf.o filter/vgm.o \
+	filter/hes.o filter/psf.o filter/spc.o filter/usf.o filter/vgm.o \
 	filter/gym/sn76496.o filter/gym/ym2151.o filter/gym/ym2612.o
 ifdef USE_MAD
-OBJECTS+=filter/mad.o
-OBJECTS+=filter/xing.o
+OBJECTS+=filter/mad.o filter/mad/xing.o
 endif
 ifdef USE_OGG
 OBJECTS+=filter/vorbis.o
@@ -74,7 +73,7 @@ ifdef USE_SNDLIB
 OBJECTS+=filter/sndlib.o
 endif
 ifdef USE_ST
-OBJECTS+=filter/st.o filter/st_wrapper.o
+OBJECTS+=filter/st.o
 endif
 ifdef USE_FFMPEG 
 OBJECTS+=filter/ffmpeg.o
