*** empty log message ***

--- a/quh/src/Makefile
+++ b/quh/src/Makefile
@@ -17,13 +17,13 @@ OBJECTS=quh.o quh_misc.o quh_filter.o \
 	filter/stdout.o filter/wav.o \
 	filter/id3.o filter/read.o filter/demux.o filter/cdda.o \
 	filter/cddb.o filter/lyrics.o \
+#	filter/cdxa.o filter/xmms.o \
+#	filter/nsf.o filter/gbs.o filter/gsf.o \
 	filter/gym.o \
+#	filter/hes.o filter/psf.o \
 	filter/spc.o \
+#	filter/usf.o filter/vgm.o \
 	filter/gym/sn76496.o filter/gym/ym2151.o filter/gym/ym2612.o
-#	filter/cdxa.o filter/xmms.o 
-#	filter/nsf.o filter/gbs.o filter/gsf.o 
-#	filter/hes.o filter/psf.o 
-#	filter/usf.o filter/vgm.o 
 ifdef USE_MAD
 OBJECTS+=filter/mad.o filter/mad/xing.o
 endif
