--- a/quh/src/configure.in
+++ b/quh/src/configure.in
@@ -25,6 +25,57 @@ st_configure_in_t configure_in[] = {
   {
     {NULL},
     {NULL},
+    {NULL},
+#ifdef  __MSDOS__                               // __MSDOS__ must come before __unix__,
+    "MSDOS=1\n",                                 //  because DJGPP defines both
+#elif   defined __unix__
+#ifdef  __CYGWIN__
+    "CYGWIN=1\n",
+#elif   defined __FreeBSD__
+    "FREEBSD=1\n",
+#elif   defined __OpenBSD__
+    "OPENBSD=1\n",
+#elif   defined __linux__
+    "LINUX=1\n",
+#elif   defined __solaris__
+#ifdef __sparc__
+    "SOLARIS_SPARC=1\n",
+#else
+    "SOLARIS_I386=1\n",
+#endif
+#else
+    "GENERIC_UNIX=1\n",
+#endif
+#elif   defined _WIN32
+#ifdef  __MINGW32__
+    "MINGW=1\n",
+#else
+    "WIN32=1\n",
+#endif
+#elif   defined __APPLE__
+#if   defined __POWERPC__ || defined __ppc__
+    "APPLE_PPC=1\n",
+#else
+    "APPLE=1\n",
+#endif
+#elif   defined __BEOS__
+    "BEOS=1\n",
+#elif   defined AMIGA
+#if defined __PPC__
+    "AMIGA_PPC=1\n",
+#else
+    "AMIGA_68K=1\n",
+#endif
+#else
+    "\n",
+#endif
+    NULL,
+    NULL,
+    NULL
+  },
+  {
+    {NULL},
+    {NULL},
     {"gcc", NULL},
     "CC=gcc\n",
     NULL,
@@ -280,14 +331,14 @@ st_configure_in_t configure_in[] = {
     "ID3 tag v2.x support..............   no"
   },
   {
-    {"libmad.a", NULL},
+    {"libmad.so", NULL},
     {"mad.h", NULL},
     {NULL},
     "USE_MAD=1\n"
     "LDFLAGS+=-lmad\n",
     "#define USE_MAD\n",
-    "MP3 (static libmad) support.......   yes",
-    "MP3 (static libmad) support.......   no"
+    "MP3 (shared libmad) support.......   yes",
+    "MP3 (shared libmad) support.......   no"
   },
 #if TODO
   // libmpeg.a from splay
@@ -507,6 +558,7 @@ st_configure_in_t configure_in[] = {
     "EsounD driver.....................   no"
   },
 #endif
+#if 0
   {
     {"libSDL.so", NULL},
     {"SDL/SDL.h", NULL},
@@ -518,6 +570,7 @@ st_configure_in_t configure_in[] = {
     "SDL sound driver..................   yes",
     "SDL sound driver..................   no"
   },
+#endif
   // linux oss
   {
     {NULL},
@@ -534,8 +587,8 @@ st_configure_in_t configure_in[] = {
     {NULL},
     {"sys/kd.h", "sys/ioctl.h", NULL},
     {NULL},
-    "USE_PCSPEAKER=1\n",
-    "#define USE_PCSPEAKER\n",
+    "USE_PCSPKR=1\n",
+    "#define USE_PCSPKR\n",
     "PC Speaker! driver................   yes",
     "PC Speaker! driver................   no\n"
     "*** you lose nothing without this driver ;-)"
